Browser/Request: -refactored from URL as String to URI -added location cache to speedup getLocation -moved parsing code from Request to Browser -TODO: review usage of removeURLPathMultipleSlash/removeURLPathTraversal in Browser